Updated About Me page

--- a/about-me.html
+++ b/about-me.html
@@ -83,16 +83,17 @@
           <h3 class="text-center">Hey, I'm</h3>
           <h1 class="text-center">Genevieve Leanne Dominguez</h1>
           <p class="mt-4">
-            Nice to meet you! I currently reside in Northern Nevada. I'm 25
-            years old with a BA in English. I was an online ESL teacher but
-            decided to make a career change when the overseas industry made some
-            permanent changes. I'm studying to become a professional front end
-            developer and web designer.
+            Nice to meet you! I currently reside in Northern Nevada. I have a BA
+            in English, which I pursued because of my love for books. I was an
+            online ESL teacher but decided to learn another career. I've loved
+            computers ever since I was a child, so SheCodes was the perfect
+            opportunity for me to pursue coding! In addition to teaching, my
+            professional background includes customer service and data entry.
           </p>
 
           <p>
-            I've designed and coded all my projects. When I'm not coding, I'm
-            writing, listening to music, or reading.
+            I've designed and coded all my projects! When I'm not coding, I'm
+            reading, writing, voluteering, and listening to music.
           </p>
         </div>
       </div>
@@ -111,8 +112,8 @@
           <p class="tools-paragraph">Tools:</p>
           <ul>
             <li>InVision</li>
-            <li>Figma - Basics</li>
-            <li>BeFunky - Basics</li>
+            <li>Figma</li>
+            <li>BeFunky</li>
             <li>Wireframes</li>
             <li>Color Palettes</li>
             <li>Google Fonts</li>
@@ -137,6 +138,7 @@
             <li>Chrome DevTools</li>
             <li>API - Basics</li>
             <li>GitHub</li>
+            <li>React</li>
           </ul>
         </div>
 
