--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="header">
       <h3>Hi, I'm</h3>
       <h1>Genevieve Leanne Dominguez</h1>
-      <h4>Front End Developer and Web Designer | NV</h4>
+      <h4>Front End Developer | NV</h4>
       <button>
         <a href="/my-work.html">Check out my work!</a>
       </button>
