--- a/my-work.html
+++ b/my-work.html
@@ -68,10 +68,8 @@
     </nav>
 
     <div class="header">
-      <h1 class="text-center">Projects</h1>
-      <h3 class="text-center additional-project-info">
-        Designed and Coded by Me
-      </h3>
+      <h1 class="text-center">My Projects</h1>
+      
     </div>
 
     <div class="container">
