Updated image on the "About Me" page

--- a/about-me.html
+++ b/about-me.html
@@ -74,7 +74,7 @@
       <div class="row header">
         <div class="col-sm-6">
           <img
-            src="/images/image-me.JPG"
+            src="/images/updated-image-me.JPG"
             alt="Professional Image of Genevieve Leanne Dominguez"
             class="img-fluid border border-primary p-2 shadow rounded pro-headshot"
           />
