Updated "About Me" paragraph

--- a/about-me.html
+++ b/about-me.html
@@ -93,7 +93,7 @@
 
           <p>
             I've designed and coded all my projects! When I'm not coding, I'm
-            reading, writing, voluteering, and listening to music.
+            reading, writing, and listening to music.
           </p>
         </div>
       </div>
